<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegisterActivity"
    android:background="#E4E4E4">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#666666"
            android:layout_marginStart="52dp"
            app:layout_constraintBottom_toTopOf="@+id/cardName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            android:layout_marginLeft="52dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            app:cardElevation="6dp"
            android:translationZ="2dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="30dp"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo">

            <EditText
                android:id="@+id/etUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="20"
                android:inputType="textPersonName"
                android:background="@drawable/et_shape"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="10dp"
                android:padding="15dp"
                android:hint="@string/userHint"
                android:textColor="@android:color/darker_gray"
                android:textColorHint="@android:color/darker_gray" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="52dp"
            android:textColor="#666666"
            app:layout_constraintTop_toBottomOf="@+id/cardName"/>
        <androidx.cardview.widget.CardView
            android:id="@+id/cardEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginEnd="25dp"
            app:cardElevation="6dp"
            android:translationZ="2dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="30dp"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_shape"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="10dp"
                android:hint="@string/emailHint"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColor="@android:color/darker_gray"
                android:textColorHint="@android:color/darker_gray" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="52dp"
            android:textColor="#666666"
            app:layout_constraintTop_toBottomOf="@+id/cardEmail"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="25dp"
            app:cardElevation="6dp"
            android:translationZ="2dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="30dp"
            app:layout_constraintTop_toBottomOf="@+id/tvPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="16"
                android:background="@drawable/et_shape"
                android:drawableLeft="@drawable/password"
                android:drawablePadding="10dp"
                android:hint="@string/passwordHint"
                android:inputType="textPassword"
                android:drawableRight="@drawable/eye"
                android:padding="15dp"
                android:textColor="@android:color/darker_gray"
                android:textColorHint="@android:color/darker_gray" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvConfPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="52dp"
            android:textColor="#666666"
            app:layout_constraintTop_toBottomOf="@+id/cardPassword"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardConfPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="25dp"
            app:cardElevation="6dp"
            android:translationZ="2dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvConfPassword">

            <EditText
                android:id="@+id/etConfPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="16"
                android:background="@drawable/et_shape"
                android:drawableRight="@drawable/eye"
                android:drawableLeft="@drawable/password"
                android:drawablePadding="10dp"
                android:hint="@string/confPasswordHint"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="@android:color/darker_gray"
                android:textColorHint="@android:color/darker_gray"/>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/btn_shape"
            android:text="@string/signUpButton"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardConfPassword" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Already Registered?"
            android:textColor="#757575"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />

        <TextView
            android:id="@+id/txtSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="SIGN IN"
            android:textStyle="bold"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>