<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4E4E4"
    tools:context=".Activities.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="275dp"
            android:layout_marginStart="52dp"
            android:layout_marginLeft="52dp"
            android:textColor="#666666"
            app:layout_constraintBottom_toTopOf="@+id/cardEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="300dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="25dp"
            app:cardElevation="6dp"
            android:translationZ="2dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="10dp"
                android:background="@null"
                android:hint="@string/emailHint"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColor="@android:color/darker_gray"
                android:textColorHint="@android:color/darker_gray" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="52dp"
            android:textColor="#666666"
            app:layout_constraintTop_toBottomOf="@+id/cardEmail" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="25dp"
            app:cardElevation="6dp"
            android:translationZ="2dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPassword">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_shape"
                android:drawablePadding="10dp"
                android:maxLength="16"
                android:elevation="6dp"
                android:translationZ="2dp"
                android:hint="@string/passwordHint"
                android:inputType="textPassword"
                android:padding="15dp"
                android:drawableLeft="@drawable/password"
                android:drawableRight="@drawable/eye"
                android:textColor="@android:color/darker_gray"
                android:textColorHint="@android:color/darker_gray" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:text="Forgot Password?"
            android:textColor="#666666"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardPassword" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/btn_shape"
            android:padding="20dp"
            android:text="@string/signInButton"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardPassword" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Don't have an account?"
            android:textColor="#666666"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

        <TextView
            android:id="@+id/txtSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="SIGN UP NOW"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>